# Basilisk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  makefile
include/: cappend.h  lodepng.h  rectpacker.h
include/atlas/: atlas.h
include/basilisk/: basilisk.h  bs_abstract.h  bs_core.h  bs_debug.h  bs_file_mgmt.h  bs_math.h  bs_mem.h  bs_models.h  bs_shaders.h  bs_textures.h  bs_ttf.h  bs_types.h  bs_wnd.h  bsexp_arithmetic.h
include/cgltf/: cgltf.h
include/gl/cglm/: affine-mat.h  affine.h  affine2d.h  applesimd.h  bezier.h  box.h  call.h  cam.h  cglm.h  color.h  common.h  curve.h  ease.h  euler.h  frustum.h  io.h  mat2.h  mat3.h  mat4.h  plane.h  project.h  quat.h  ray.h  sphere.h  struct.h  types-struct.h  types.h  util.h  vec2-ext.h  vec2.h  vec3-ext.h  vec3.h  vec4-ext.h  vec4.h  version.h
include/gl/cglm/call/: affine.h  affine2d.h  bezier.h  box.h  cam.h  curve.h  ease.h  euler.h  frustum.h  io.h  mat2.h  mat3.h  mat4.h  plane.h  project.h  quat.h  ray.h  sphere.h  vec2.h  vec3.h  vec4.h
include/gl/cglm/call/clipspace/: ortho_lh_no.h  ortho_lh_zo.h  ortho_rh_no.h  ortho_rh_zo.h  persp_lh_no.h  persp_lh_zo.h  persp_rh_no.h  persp_rh_zo.h  project_no.h  project_zo.h  view_lh_no.h  view_lh_zo.h  view_rh_no.h  view_rh_zo.h
include/gl/cglm/clipspace/: ortho_lh_no.h  ortho_lh_zo.h  ortho_rh_no.h  ortho_rh_zo.h  persp.h  persp_lh_no.h  persp_lh_zo.h  persp_rh_no.h  persp_rh_zo.h  project_no.h  project_zo.h  view_lh.h  view_lh_no.h  view_lh_zo.h  view_rh.h  view_rh_no.h  view_rh_zo.h
include/gl/cglm/simd/: arm.h  intrin.h  x86.h
include/gl/cglm/struct/: affine.h  affine2d.h  box.h  cam.h  color.h  curve.h  euler.h  frustum.h  io.h  mat2.h  mat3.h  mat4.h  plane.h  project.h  quat.h  sphere.h  vec2-ext.h  vec2.h  vec3-ext.h  vec3.h  vec4-ext.h  vec4.h
include/gl/glad/: glad.h  glad_wgl.h
include/weebking/: resources.h  wk.h
src/: bs_abstract.c  bs_core.c  bs_debug.c  bs_math.c  bs_mem.c  bs_models.c  bs_shaders.c  bs_textures.c  bs_ttf.c  bs_wnd.c  main.c
src/basilisk/: bs_core.c  bs_debug.c  bs_file_mgmt.c  bs_math.c  bs_mem.c  bs_models.c  bs_shaders.c  bs_textures.c  bs_wnd.c
(+23 files in other folders)
